[tool.poetry]
name = "noaa2mqtt"
version = "0.1.0"
description = ""
authors = ["Luiz Ribeiro <luizribeiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
metar = "^1.9.0"
paho-mqtt = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
